--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
                 <span class="card-icon">⚡</span>
                 <h2>BioSync</h2>
                 <p>Audit radiasi elektromagnetik (EMF).</p>
+                <p>(Hanya beberapa perangkat yang memiliki Magnetometer)</p>
             </div>
 
             <div class="project-card" onclick="goToProject('pulse.html', 'PulseCircadian')">
@@ -245,3 +246,4 @@
 </body>
 
 </html>
+
